# elfak-wiki

./: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/assets/css/: discord-invite.css  extra.css
docs/assets/js/: discord-invite.js  katex.js
docs/cetvrta/: index.md
docs/druga/: index.md
docs/druga/aor1/: index.md
docs/druga/aor1/asm/: instructions.md  registers.md
docs/druga/baze/: 1.md  index.md  oracle-database-free.md  oracle-sqldeveloper.md
docs/druga/diskretna/: index.md
docs/druga/lp/: 1.md  2.md  3.md  4.md  5.md  index.md
docs/druga/oop/: 1.md  2.md  3.md  4.md  5.md  index.md
docs/elk/: index.md  oop
docs/elk/sis/: index.md
docs/prva/: index.md
docs/prva/aip/: 1.md  2.md  3.md  4.md  5.md  6.md  index.md
docs/prva/uur/: 1.md  2.md  3.md  4.md  5.md  index.md
docs/ri/oop/: index.md
docs/ri/oop/lab/: 1.md  2.md  3.md  4.md  5.md
docs/treca/: index.md
hooks/: apple_emoji.py
overrides/: main.html
overrides/partials/: copyright.html
