[tool.poetry]
name = "elfak-wiki"
version = "0.1.0"
description = ""
authors = ["Aky Maky <akymaky@tuta.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocs-glightbox = "^0.4.0"
pygments-arm = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
